✨  Add radix ui and outfit font

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
 body {
-  font-family: Inter, Helvetica, sans-serif;
+  font-family: outfit, Helvetica, sans-serif;
+}
+@theme{
+  --color-primary: #4fbf8b;
+  --color-primary-dull:#44ae7c;
 }
