--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,6 @@ body {
   font-family: outfit, Helvetica, sans-serif;
 }
 @theme{
-  --color-primary: #4fbf8b;
-  --color-primary-dull:#44ae7c;
+  --color-primary: #D4FF70;
+  --color-primary-dull: rgb(212, 255, 112, 0.5);
 }
